Deprecated Locale constructor usage removed